# plasmoid-helloworldplugin

./: .cmake-format  CMakeLists.txt
.devcontainer/: devcontainer.json  install_dependencies_ubuntu_22.sh
package/: metadata.desktop
package/contents/ui/: main.qml
scripts/: build.sh  try_with_plasmoidviewer.sh
